# tfs-old-svn

./: Makefile  Makefile.am  Makefile.mingw  TODO  account.cpp  account.h  actions.cpp  actions.h  admin.cpp  admin.h  allocator.cpp  allocator.h  autogen.sh  ban.cpp  ban.h  baseevents.cpp  baseevents.h  beds.cpp  beds.h  build.sh  chat.cpp  chat.h  combat.cpp  combat.h  commands.cpp  commands.h  condition.cpp  condition.h  config.lua  config.lua.dist  configmanager.cpp  configmanager.h  configure.ac  connection.cpp  connection.h  const.h  container.cpp  container.h  creature.cpp  creature.h  (+178 more)
cb/: TheForgottenServer.cbp  TheForgottenServer_private.rc
codeblocks/: The Forgotten Server.cbp  windows_resources.rc
data/: compat.lua  functions.lua  global.lua
data/XML/: channels.xml  commands.xml  groups.xml  mounts.xml  outfits.xml  randomization.xml  servers.xml  stages.xml  vocations.xml
data/actions/: actions.xml
data/actions/lib/: actions.lua
data/actions/scripts/: decrease.lua  default.lua  dialogExample.lua  increase.lua
data/classes/: database.lua
data/creaturescripts/: creaturescripts.xml
data/creaturescripts/scripts/: advancesave.lua  banbook.lua  extendedopcode.lua  firstitems.lua  guild.lua  guildmotd.lua  idle.lua  login.lua  mail.lua  playerdeath.lua  skullcheck.lua  thankyou.lua
data/globalevents/: globalevents.xml
data/globalevents/scripts/: clean.lua  init.lua  record.lua  save.lua  start.lua
data/items/: items.otb  items.xml  items.xsd  randomization.xml
data/lib/: 000-constant.lua  001-class.lua  002-wait.lua  004-database.lua  011-string.lua  011string.lua  012-table.lua  031-vocations.lua  032-position.lua  033-ip.lua  034-exhaustion.lua  050-function.lua  100-compat.lua  100-shortcut.lua  101-compat.lua  101-shortcut.lua  compat.lua  constant.lua  data.lua  database.lua  exhaustion.lua  function.lua  ip.lua  position.lua  string.lua  vocations.lua  wait.lua
data/monster/: amazon.xml  ancientscarab.xml  apocalypse.xml  ashmunrah.xml  assassin.xml  badger.xml  bandit.xml  banshee.xml  bat.xml  bazir.xml  bear.xml  behemoth.xml  beholder.xml  blackknight.xml  blacksheep.xml  bloodcrab.xml  bluedjinn.xml  bonebeast.xml  bonelord.xml  bug.xml  butterflyblue.xml  butterflypurple.xml  butterflyred.xml  butterflyyellow.xml  carniphila.xml  carrionworm.xml  caverat.xml  centipede.xml  chicken.xml  cobra.xml  crab.xml  crocodile.xml  cryptshambler.xml  cyclops.xml  darkmonk.xml  deathslicer.xml  deer.xml  demodras.xml  demon.xml  demonskeleton.xml  (+127 more)
data/monster/Amazons/: amazon.xml  valkyrie.xml
data/monster/Annelids/: carrion worm.xml  rotworm.xml
data/monster/Apes/: kongra.xml  merlkin.xml  sibang.xml
data/monster/Arachnids/: crystal spider.xml  giant spider.xml  poison spider.xml  sandstone scorpion.xml  scorpion.xml  tarantula.xml  wailing widow.xml
data/monster/Aracnids/: crystal spider.xml  giant spider.xml  poison spider.xml  scorpion.xml  spider.xml  tarantula.xml
data/monster/Barbarians/: barbarian bloodwalker.xml  barbarian brutetamer.xml  barbarian headsplitter.xml  barbarian skullhunter.xml
data/monster/Bears/: bear.xml  panda.xml  polar bear.xml  undead cavebear.xml
data/monster/Beholders/: beholder.xml  bonelord.xml  braindeath.xml  elder beholder.xml  gazer.xml
data/monster/Bio-Elementals/: bog raider.xml  carniphila.xml  defiler.xml  haunted treeling.xml  slime summon.xml  slime.xml  slug.xml  son of verminor.xml  spit nettle.xml
data/monster/Birds/: chicken.xml  dire penguin.xml  flamingo.xml  parrot.xml  penguin.xml  seagull.xml  terror bird.xml
data/monster/Blobs/: acid blob.xml  death blob.xml  mercury blob.xml
data/monster/Bonelords/: elder bonelord.xml
data/monster/Bosses/: annihilon.xml  apocalypse.xml  apprentice sheng.xml  barbaria.xml  big boss trolliver.xml  bones.xml  brutus bloodbeard.xml  chizzoron the distorter.xml  countess sorrow.xml  deadeye devious.xml  demodras.xml  dharalion.xml  dire penguin.xml  dracola.xml  esmeralda.xml  fernfang.xml  ferumbras.xml  fluffy.xml  foreman kneebiter.xml  general murius.xml  (+51 more)
data/movements/: movements.xml
data/npc/: Aldo.xml  Alice.xml  Deruno.xml  Dimral.xml  Donald.xml  Eryn.xml  Lola.xml  Lua82Example.xml  Nimral.xml  Riona.xml  Soya.xml  Ted.xml  The Forgotten King.xml  The Oracle.xml  Timral.xml  Tyoric.xml  Varkhal.xml  XML82Example.xml  bankman billy.xml  cityguard.xml  helmut.xml  mailman maily.xml  merchant glut.xml  npcs.xml  oracle the second.xml  oracle.xml  ruby.xml
data/spells/: spells.xml
data/talkactions/: talkactions.xml
data/weapons/: weapons.xml
data/world/: forgotten-spawn.xml  forgotten.otbm  tfs-spawn.xml  tfs.otbm
dev-cpp/: TheForgottenServer-console-debug.dev  TheForgottenServer-console-debug_private.h  TheForgottenServer-console-debug_private.rc  TheForgottenServer-console.dev  TheForgottenServer-console_private.h  TheForgottenServer-console_private.rc  TheForgottenServer-debug.dev  TheForgottenServer-debug_private.h  TheForgottenServer-debug_private.rc  TheForgottenServer-debug_private.res  TheForgottenServer-dumps.dev  TheForgottenServer.dev  TheForgottenServer_private.h  TheForgottenServer_private.rc  TheForgottenServer_private.res
doc/: ACTION_IDS  CHANGELOG  COMMANDS_HELP  CONFIG_HELP  GROUPS  LICENSE  LIQUIDS  LUA_FUNCTIONS  MYSQL_HELP  OUTFIT_STATS  README  RESERVED_IDS  SCRIPTSYSTEM_HELP  SIGNALS  SQL_QUERIES  TODO  TODO_04
lib/win32/: libeay32MT.lib  libmysql.lib  lua51.lib  mpir.lib
lib/win64/: libeay32MT.lib  libmysql.lib  lua51.lib  mpir.lib
mods/: buypremium_command.xml  change-gold.xml  changender_command.xml  custommonsters.xml  customspells.xml  firstitems.xml  highscorebook.xml
mods/scripts/: buypremium.lua  changender.lua  firstitems.lua
schemas/: mysql.sql  pgsql.sql  sqlite.sql
sql-updater/: LICENSE  Makefile  updater.cpp
vc10/: The Forgotten Server.sln  The Forgotten Server.vcxproj  The Forgotten Server.vcxproj.filters  arch32.props  arch64.props  debug.props  release.props  settings.props  tfs.sln  tfs.vcxproj  tfs.vcxproj.filters  tfs02.sln  tfs02.vcxproj  tfs02.vcxproj.filters
(+678 files in other folders)
